plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'gg.jte.gradle' version '3.1.15'
    id 'org.springframework.boot' version '4.0.1'
}

group = 'ru.mentee.power'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    springBootVersion = '4.0.1'
    jteVersion = '3.1.15'
    junitVersion = '5.12.0'
    assertjVersion = '3.25.3'
    servletVersion = '6.1.0'
    tomcatVersion = '11.0.1'
}

dependencies {
    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testImplementation 'net.bytebuddy:byte-buddy:1.15.4'
    testImplementation 'net.bytebuddy:byte-buddy-agent:1.15.4'
    implementation "jakarta.servlet:jakarta.servlet-api:${servletVersion}"
    implementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
    implementation "gg.jte:jte:${jteVersion}"
    implementation "gg.jte:jte-runtime:${jteVersion}"
    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
}

application {
    mainClass = 'ru.mentee.power.crm.Main'
}


tasks.named('bootRun') {
    mainClass = 'ru.mentee.power.crm.spring.Application'
}

tasks.named('bootJar') {
    mainClass = 'ru.mentee.power.crm.spring.Application'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}


checkstyle {
    toolVersion = '10.12.5'  // актуальная версия на 2025 год
    configFile = file('config/checkstyle/checkstyle.xml')
}

jte {
    sourceDirectory = file("src/main/jte").toPath()
    contentType = "Html"
    binaryStaticContent = false
}


test {
    useJUnitPlatform()
    jvmArgs += ["-Dnet.bytebuddy.experimental=true"]
    finalizedBy jacocoTestReport  // генерировать отчёт после тестов
}



jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }
}


jacocoTestCoverageVerification {
    dependsOn jacocoTestReport

    violationRules {
        rule {
            limit {
                minimum = 0.6  // 80% покрытия инструкций
            }
        }
    }
}

check {
    dependsOn jacocoTestCoverageVerification
}